test_apps/test-typechecker/fail/entitycomplexpropkind.app
application test

section datamodel

  entity User {
    authoredPapers -> String
  }

  entity Paper {
  }